@@ -1,3 +1,8 @@
+2009-04-23  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/38228
+	* g++.dg/expr/bound-mem-fun.C: New test.
+
 2009-04-22  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/39639
